<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.banksampah.customer.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.banksampah.customer.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_profileUpdateFragment"
            app:destination="@id/profileUpdateFragment" />
        <action
            android:id="@+id/action_nav_profile_to_changePasswordFragment"
            app:destination="@id/changePasswordFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_history"
        android:name="com.banksampah.customer.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_service"
        android:name="com.banksampah.customer.ui.service.ServiceFragment"
        android:label="@string/service"
        tools:layout="@layout/fragment_service" />
    <fragment
        android:id="@+id/profileUpdateFragment"
        android:name="com.banksampah.customer.ui.profile.update.ProfileUpdateFragment"
        android:label="Ubah Profil"
        tools:layout="@layout/fragment_profile_update" >
        <action
            android:id="@+id/action_profileUpdateFragment_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>
    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.banksampah.customer.ui.profile.password.ChangePasswordFragment"
        android:label="Ubah Password"
        tools:layout="@layout/fragment_change_password" >
        <action
            android:id="@+id/action_changePasswordFragment_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>

</navigation>