<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    tools:context=".ui.service.ServiceFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masukkan_keluhan_anda"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_complaint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="5"
        android:background="@drawable/bg_round_white"
        android:hint="@string/keluhan_anda"
        android:autofillHints="@string/keluhan_anda"/>

    <Button
        android:id="@+id/btn_complain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/kirim"
        android:background="@drawable/bg_round_green"
        style="@style/Widget.AppCompat.Button.Colored"
        android:drawablePadding="16dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="16dp" />
</LinearLayout>