<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/hijau"
    tools:context=".ui.profile.ProfileFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:paddingTop="32dp"
                android:paddingBottom="32dp"
                android:gravity="center"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@android:color/white"
                    android:src="@drawable/ic_user_512dp" />
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    tools:text="@string/nama_lengkap"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="32dp"
                android:paddingTop="32dp"
                android:paddingBottom="32dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">
                <TextView
                    android:id="@+id/tv_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_phone_24dp"
                    android:drawableLeft="@drawable/ic_phone_24dp"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    tools:text="@string/no_hp_telephone"/>
                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/ic_location_on_24dp"
                    android:drawableLeft="@drawable/ic_location_on_24dp"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    tools:text="@string/alamat" />
            </LinearLayout>
            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingRight="40dp"
                android:paddingLeft="40dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/ubah_data"
                android:background="@drawable/bg_round_green"
                style="@style/Widget.AppCompat.Button.Colored"
                android:drawablePadding="16dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>