<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.profile.password.ChangePasswordFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="16dp">
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/ubah_password"
                android:layout_marginBottom="16dp"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_baru"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:background="@drawable/bg_round_white"
                android:autofillHints="@string/password_baru" />


            <EditText
                android:id="@+id/edt_password_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_baru"
                android:autofillHints="@string/password_baru"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:background="@drawable/bg_round_white" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="40dp"
                android:paddingLeft="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_round_green"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/ubah"
                android:textSize="20sp"
                android:layout_marginTop="24dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>